@@ -297,6 +297,122 @@ class Article extends modResource {
 
         return $removed;
     }
+
+    /**
+     * Duplicate the Article
+     *
+     * @param array $options An array of options.
+     * @return mixed Returns either an error message, or the newly created modResource object.
+     */
+    public function duplicate(array $options = array()) {
+        if (!($this->xpdo instanceof modX)) return false;
+
+        /* duplicate resource */
+        $prefixDuplicate = !empty($options['prefixDuplicate']) ? true : false;
+        $newName = !empty($options['newName']) ? $options['newName'] : $this->get('pagetitle');
+        /** @var Article $newResource */
+        $newResource = $this->xpdo->newObject('Article');
+        $newResource->fromArray($this->toArray('', true), '', false, true);
+        $newResource->set('pagetitle', $newName);
+
+        /* do published status preserving */
+        $publishedMode = $this->getOption('publishedMode',$options,'preserve');
+        switch ($publishedMode) {
+            case 'unpublish':
+                $newResource->set('published',false);
+                $newResource->set('publishedon',0);
+                $newResource->set('publishedby',0);
+                break;
+            case 'publish':
+                $newResource->set('published',true);
+                $newResource->set('publishedon',time());
+                $newResource->set('publishedby',$this->xpdo->user->get('id'));
+                break;
+            case 'preserve':
+            default:
+                $newResource->set('published',$this->get('published'));
+                $newResource->set('publishedon',$this->get('publishedon'));
+                $newResource->set('publishedby',$this->get('publishedby'));
+                break;
+        }
+
+        /* allow overrides for every item */
+        if (!empty($options['overrides']) && is_array($options['overrides'])) {
+            $newResource->fromArray($options['overrides']);
+        }
+        $newResource->set('id',0);
+
+        /* make sure children get assigned to new parent */
+        $newResource->set('parent',isset($options['parent']) ? $options['parent'] : $this->get('parent'));
+        $newResource->set('createdby',$this->xpdo->user->get('id'));
+        $newResource->set('createdon',time());
+        $newResource->set('editedby',0);
+        $newResource->set('editedon',0);
+
+        /* get new alias */
+        $alias = $newResource->cleanAlias($newName);
+        if ($newResource->get('published')) {
+            $newResource->setArchiveUri();
+        } else {
+            $newResource->set('uri','');
+            $newResource->set('uri_override',false);
+            $aliasPath = $newResource->getAliasPath($newName);
+            $newResource->set('uri',$aliasPath);
+            $newResource->set('uri_override',true);
+            $newResource->set('alias',$alias);
+        }
+
+        /* set new menuindex */
+        $childrenCount = $this->xpdo->getCount('modResource',array('parent' => $this->get('parent')));
+        $newResource->set('menuindex',$childrenCount);
+
+        /* save resource */
+        if (!$newResource->save()) {
+            return $this->xpdo->lexicon('resource_err_duplicate');
+        }
+
+        $tvds = $this->getMany('TemplateVarResources');
+        /** @var modTemplateVarResource $oldTemplateVarResource */
+        foreach ($tvds as $oldTemplateVarResource) {
+            /** @var modTemplateVarResource $newTemplateVarResource */
+            $newTemplateVarResource = $this->xpdo->newObject('modTemplateVarResource');
+            $newTemplateVarResource->set('contentid',$newResource->get('id'));
+            $newTemplateVarResource->set('tmplvarid',$oldTemplateVarResource->get('tmplvarid'));
+            $newTemplateVarResource->set('value',$oldTemplateVarResource->get('value'));
+            $newTemplateVarResource->save();
+        }
+
+        $groups = $this->getMany('ResourceGroupResources');
+        /** @var modResourceGroupResource $oldResourceGroupResource */
+        foreach ($groups as $oldResourceGroupResource) {
+            /** @var modResourceGroupResource $newResourceGroupResource */
+            $newResourceGroupResource = $this->xpdo->newObject('modResourceGroupResource');
+            $newResourceGroupResource->set('document_group',$oldResourceGroupResource->get('document_group'));
+            $newResourceGroupResource->set('document',$newResource->get('id'));
+            $newResourceGroupResource->save();
+        }
+
+        /* duplicate resource, recursively */
+        $duplicateChildren = isset($options['duplicateChildren']) ? $options['duplicateChildren'] : true;
+        if ($duplicateChildren) {
+            if (!$this->checkPolicy('add_children')) return $newResource;
+
+            $children = $this->getMany('Children');
+            if (is_array($children) && count($children) > 0) {
+                /** @var modResource $child */
+                foreach ($children as $child) {
+                    $child->duplicate(array(
+                        'duplicateChildren' => true,
+                        'parent' => $options['parent'],
+                        'prefixDuplicate' => $prefixDuplicate,
+                        'overrides' => !empty($options['overrides']) ? $options['overrides'] : false,
+                        'publishedMode' => $publishedMode,
+                    ));
+                }
+            }
+        }
+        return $newResource;
+    }
 }
 
 /**
